c-introduction/error-log.txt
hello_broken.c: In function ‘main’:
hello_broken.c:4:5: error: expected declaration or statement at end of input
    4 |     return 0;
      |     ^~~~~~
